--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dyad-generated-app</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   </head>
 
   <body>
